--- a/huahua/package.json
+++ b/huahua/package.json
@@ -16,6 +16,7 @@
     "log4js": "^1.1.1",
     "morgan": "~1.7.0",
     "node-mysql": "^0.4.2",
+    "pug": "^2.0.0-rc.2",
     "serve-favicon": "~2.3.0",
     "velocity-animate": "^1.5.0",
     "vue": "^2.2.6",
@@ -32,14 +33,18 @@
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "perfect-scrollbar": "^0.7.1",
     "postcss-cssnext": "^2.11.0",
+    "sass-loader": "^6.0.6",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
-    "file-loader": "^0.11.1",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^11.1.3",
     "vue-template-compiler": "^2.2.1",
+    "vue-waterfall-easy": "^1.0.4",
     "wangeditor": "^2.1.23",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2"
