--- a/huahua/package.json
+++ b/huahua/package.json
@@ -7,11 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "compression": "^1.7.0",
     "connect-history-api-fallback": "^1.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "^2.5.6",
     "express": "~4.13.4",
+    "imagemin": "^5.3.1",
     "jade": "~1.11.0",
     "log4js": "^1.1.1",
     "morgan": "~1.7.0",
