--- a/huahua/package.json
+++ b/huahua/package.json
@@ -1,54 +1,67 @@
 {
-  "name": "huahua",
-  "version": "0.0.0",
+  "name": "hauhua",
+  "version": "1.0.0",
+  "description": "A Vue.js project",
+  "author": "eryueweb <eryue0123@163.com>",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "node build/dev-server.js",
+    "start": "node build/dev-server.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "compression": "^1.7.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "^2.5.6",
-    "express": "~4.13.4",
-    "imagemin": "^5.3.1",
-    "jade": "~1.11.0",
-    "log4js": "^1.1.1",
-    "morgan": "~1.7.0",
-    "node-mysql": "^0.4.2",
-    "pug": "^2.0.0-rc.2",
-    "serve-favicon": "~2.3.0",
-    "velocity-animate": "^1.5.0",
-    "vue": "^2.2.6",
-    "vue-resource": "^1.3.1",
-    "vue-router": "^2.3.1"
+    "log4js": "^2.3.3",
+    "mysql": "^2.14.1",
+    "perfect-scrollbar": "^0.7.1",
+    "serve-favicon": "^2.4.3",
+    "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
-    "css-loader": "^0.26.2",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "cssnano": "^3.10.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
+    "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
-    "perfect-scrollbar": "^0.7.1",
-    "postcss-cssnext": "^2.11.0",
-    "sass-loader": "^6.0.6",
-    "scss-loader": "0.0.1",
-    "style-loader": "^0.13.2",
+    "http-proxy-middleware": "^0.17.3",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^11.1.3",
-    "vue-template-compiler": "^2.2.1",
-    "vue-waterfall-easy": "^1.0.4",
-    "wangeditor": "^2.1.23",
+    "vue-loader": "^12.1.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2"
-  }
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
